# forgemill-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
src/forgemill_mcp/: __init__.py  client.py  config.py  server.py
tests/: test_config.py
