[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgemill-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Forgemill — VM deployment and lifecycle management."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Forgemill Contributors" }]
keywords = ["mcp", "forgemill", "vm", "vmware", "proxmox", "claude"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "fastmcp>=2.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
  "mypy>=1.8.0",
]

[project.scripts]
forgemill-mcp = "forgemill_mcp.server:main"

[project.urls]
Repository = "https://github.com/blink-zero/forgemill-mcp"
Issues = "https://github.com/blink-zero/forgemill-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/forgemill_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
